fixed spacing on profolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,15 +124,15 @@ footer {
     position: relative;
     height: 200px;
     width: 250px;
-    margin-left: 5%;
+    margin-left: 40px;
     float: left;
-    margin-bottom: 5%;
+    margin-bottom: 40px;
 }
 
 .pro-title {
     position: absolute;
     bottom: 30px;
-    left: 12px;
+    left: 40px;
     width: 251px;
     height: 50px;
     background: #4aaaa5;
